# HCT

./: CMakeLists.example.txt  CMakeLists.txt  HCT.cmake  HWLib_Target.cmake  Makefile.convert  Makefile.inc  New-Version.cmake  Voorbeeld_CMakeLists.txt  readme.md  run_make.bat
New_Target_Maker/: CMakeLists.txt
SFML/SFML/: Graphics.hpp
Target_Maker/: CMakeLists.txt
